[package]
name = "kuma"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# libs
hydra = { path = "../hydra" }
kratos = { path = "../kratos" }
oathkeeper = { path = "../oathkeeper" }

# crates
chrono = "0.4.19"
config = "0.11.0"

# tokio
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.7"
futures = "0.3.17"

# serde, types
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# errors
anyhow = "1.0.44"
thiserror = "1.0.29"
